update for material

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 	<title>Material</title>
 
 	<!-- css -->
-	<link href="../css/base.min.css" rel="stylesheet">
+	<link href="./css/base.min.css" rel="stylesheet">
 
 	<!-- css for doc -->
-	<link href="../css/project.min.css" rel="stylesheet">
+	<link href="./css/project.min.css" rel="stylesheet">
 	
 	<!-- favicon -->
 	<!-- ... -->
@@ -319,9 +319,9 @@
 
 	<!-- js -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="../js/base.min.js"></script>
+	<script src="./js/base.min.js"></script>
 
 	<!-- js for doc -->
-	<script src="../js/project.min.js"></script>
+	<script src="./js/project.min.js"></script>
 </body>
 </html>
