try to change some info

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" name="viewport">
-	<title>Material</title>
+	<title>Eglise baptise chinoise de marne la vallée</title>
 
 	<!-- css -->
 	<link href="./css/base.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 				</a>
 			</li>
 		</ul>
-		<a class="header-logo margin-left-no" href="index.html">Material</a>
+		<a class="header-logo margin-left-no" href="index.html">Eglise baptise chinoise de marne la vallée</a>
 		<ul class="nav nav-list pull-right">
 			<li class="dropdown margin-right">
 				<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
@@ -48,7 +48,7 @@
 	<nav aria-hidden="true" class="menu" id="doc_menu" tabindex="-1">
 		<div class="menu-scroll">
 			<div class="menu-content">
-				<a class="menu-logo" href="index.html">Material</a>
+				<a class="menu-logo" href="index.html">Eglise baptise chinoise de marne la vallée</a>
 				<ul class="nav">
 					<li>
 						<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Components</a>
@@ -146,7 +146,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-lg-push-3 col-sm-10 col-sm-push-1">
-						<h1 class="heading">Material</h1>
+						<h1 class="heading">Eglise baptise chinoise de marne la vallée</h1>
 					</div>
 				</div>
 			</div>
@@ -158,14 +158,14 @@
 						<div class="card">
 							<div class="card-main">
 								<div class="card-inner">
-									<p>Daemonite's Material UI is a fully responsive, cross-platform, front-end interface based on Google Material Design. This lightweight framework is built in HTML5 using Bootstrap, JS and CSS.</p>
-									<blockquote>A visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is material design. <sup><a href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank"><span class="icon">open_in_new</span></a></sup></blockquote>
-									<p>Have a play with this working prototype of Material, let us know what you think at the <a href="http://labs.daemon.com.au" target="_blank">Daemon Labs</a> forum.</p>
+									<p>Daemonite's Eglise baptise chinoise de marne la vallée UI is a fully responsive, cross-platform, front-end interface based on Google Eglise baptise chinoise de marne la vallée Design. This lightweight framework is built in HTML5 using Bootstrap, JS and CSS.</p>
+									<blockquote>A visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is Eglise baptise chinoise de marne la vallée design. <sup><a href="http://www.google.com/design/spec/Eglise baptise chinoise de marne la vallée-design/introduction.html" target="_blank"><span class="icon">open_in_new</span></a></sup></blockquote>
+									<p>Have a play with this working prototype of Eglise baptise chinoise de marne la vallée, let us know what you think at the <a href="http://labs.daemon.com.au" target="_blank">Daemon Labs</a> forum.</p>
 								</div>
 							</div>
 						</div>
 						<h2 class="content-sub-heading">Components</h2>
-						<p>Below are components that have been defined by Google Material Design guidelines. For more information, please visit <a href="https://www.google.com/design/spec/components/buttons.html" target="_blank">here</a>.</p>
+						<p>Below are components that have been defined by Google Eglise baptise chinoise de marne la vallée Design guidelines. For more information, please visit <a href="https://www.google.com/design/spec/components/buttons.html" target="_blank">here</a>.</p>
 						<div class="tile-wrap">
 							<a class="tile waves-attach" href="ui-button.html">
 								<div class="tile-inner">
@@ -239,7 +239,7 @@
 							</a>
 						</div>
 						<h2 class="content-sub-heading">Extras</h2>
-						<p>These components have not been specifically defined by Google Material Design guidelines, but are used in some Google apps and/or sites.</p>
+						<p>These components have not been specifically defined by Google Eglise baptise chinoise de marne la vallée Design guidelines, but are used in some Google apps and/or sites.</p>
 						<div class="tile-wrap">
 							<a class="tile waves-attach" href="ui-avatar.html">
 								<div class="tile-inner">
@@ -268,7 +268,7 @@
 							</a>
 						</div>
 						<h2 class="content-sub-heading">Javascript</h2>
-						<p>Material includes several Bootstrap's Javascript plugins, <code>affix</code>, <code>collapse</code>, <code>dropdown</code>, <code>modal</code> &amp; <code>tab</code>, to be specific. For more information, please visit <a href="http://getbootstrap.com/javascript/" target="_blank">here</a>.</p>
+						<p>Eglise baptise chinoise de marne la vallée includes several Bootstrap's Javascript plugins, <code>affix</code>, <code>collapse</code>, <code>dropdown</code>, <code>modal</code> &amp; <code>tab</code>, to be specific. For more information, please visit <a href="http://getbootstrap.com/javascript/" target="_blank">here</a>.</p>
 						<div class="tile-wrap">
 							<a class="tile waves-attach" href="ui-affix.html">
 								<div class="tile-inner">
@@ -303,14 +303,14 @@
 	</main>
 	<footer class="footer">
 		<div class="container">
-			<p>Material</p>
+			<p>Eglise baptise chinoise de marne la vallée</p>
 		</div>
 	</footer>
 	<div class="fbtn-container">
 		<div class="fbtn-inner">
 			<a class="fbtn fbtn-brand-accent fbtn-lg" data-toggle="dropdown"><span class="fbtn-text">Links</span><span class="fbtn-ori icon">apps</span><span class="fbtn-sub icon">close</span></a>
 			<div class="fbtn-dropdown">
-				<a class="fbtn" href="https://github.com/Daemonite/material" target="_blank"><span class="fbtn-text">Fork me on GitHub</span><span class="icon">code</span></a>
+				<a class="fbtn" href="https://github.com/Daemonite/Eglise baptise chinoise de marne la vallée" target="_blank"><span class="fbtn-text">Fork me on GitHub</span><span class="icon">code</span></a>
 				<a class="fbtn fbtn-brand" href="https://twitter.com/daemonites" target="_blank"><span class="fbtn-text">Follow Daemon on Twitter</span><span class="icon">share</span></a>
 				<a class="fbtn fbtn-green" href="http://www.daemon.com.au/" target="_blank"><span class="fbtn-text">Visit Daemon Website</span><span class="icon">link</span></a>
 			</div>
