--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 	<title>Eglise baptise chinoise de marne la vallée</title>
 
 	<!-- css -->
-	<link href="./css/base.min.css" rel="stylesheet">
+	<link href="./css/base.css" rel="stylesheet">
 
 	<!-- css for doc -->
-	<link href="./css/project.min.css" rel="stylesheet">
+	<link href="./css/project.css" rel="stylesheet">
 	
 	<!-- favicon -->
 	<!-- ... -->
@@ -24,12 +24,12 @@
 				</a>
 			</li>
 		</ul>
-		<a class="header-logo margin-left-no" href="index.html">Eglise baptise chinoise de marne la vallée</a>
+		<a class="header-logo margin-left-no" href="index.html">Eglise baptise chinoise de marne la vallée - Baptème de Kevin LIM</a>
 		<ul class="nav nav-list pull-right">
 			<li class="dropdown margin-right">
 				<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
 					<span class="access-hide">John Smith</span>
-					<span class="avatar avatar-sm"><img alt="alt text for John Smith avatar" src="./images/users/avatar-001.jpg"></span>
+					<span class="avatar avatar-sm"><img alt="alt text for John Smith avatar" src="./images/users/KevinSmall.jpg"></span>
 				</a>
 				<ul class="dropdown-menu">
 					<li>
@@ -48,92 +48,68 @@
 	<nav aria-hidden="true" class="menu" id="doc_menu" tabindex="-1">
 		<div class="menu-scroll">
 			<div class="menu-content">
-				<a class="menu-logo" href="index.html">Eglise baptise chinoise de marne la vallée</a>
+				<a class="menu-logo" href="index.html">Baptême de Kevin Lim</a>
 				<ul class="nav">
 					<li>
-						<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Components</a>
+						<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Messages</a>
 						<ul class="collapse menu-collapse" id="doc_menu_components">
-							<li>
-								<a class="waves-attach" href="ui-button.html">Buttons</a>
+                            <li>
+								<a class="waves-attach" href="ui-button.html">Celine LIM</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-button-fab.html">Buttons <small>(Floating Action Button)</small></a>
+								<a class="waves-attach" href="ui-button.html">Virginie SOK</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-card.html">Cards</a>
+								<a class="waves-attach" href="ui-button-fab.html">Mickael SOK</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-data-table.html">Data Tables</a>
+								<a class="waves-attach" href="ui-card.html">David SOK</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-dialog.html">Dialogs</a>
+								<a class="waves-attach" href="ui-data-table.html">Jessica SOK</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-dropdown-menu.html">Menus</a>
+								<a class="waves-attach" href="ui-dialog.html">Jonathan DONG</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-nav-drawer.html">Navigation Drawers</a>
+								<a class="waves-attach" href="ui-dropdown-menu.html">Anceline DONG</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-picker.html">Pickers</a>
+								<a class="waves-attach" href="ui-nav-drawer.html">Marlène DONG</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-progress.html">Progress</a>
+								<a class="waves-attach" href="ui-picker.html">Jonathan TRAN</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-selection-control.html">Selection Controls</a>
+								<a class="waves-attach" href="ui-progress.html">Pascal TRAN</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-snackbar.html">Snackbars</a>
+								<a class="waves-attach" href="ui-selection-control.html">Alexandre TRAN</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-tab.html">Tabs</a>
+								<a class="waves-attach" href="ui-snackbar.html">Jeremy NG</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-text-field.html">Text Fields</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-toolbar.html">Toolbars</a>
+								<a class="waves-attach" href="ui-tab.html">Alex NG</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Extras</a>
+						<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Vidéos</a>
 						<ul class="collapse menu-collapse" id="doc_menu_extras">
 							<li>
-								<a class="waves-attach" href="ui-avatar.html">Avatars</a>
+								<a class="waves-attach" href="ui-avatar.html">2010</a>
 							</li>
 							<li>
-								<a class="waves-attach" href="ui-icon.html">Icons</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-label.html">Labels</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-nav.html">Navs</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-tile.html">Tiles</a>
+								<a class="waves-attach" href="ui-icon.html">Noel 2005</a>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_javascript">Javascript</a>
+						<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_javascript">Trucs</a>
 						<ul class="collapse menu-collapse" id="doc_menu_javascript">
 							<li>
-								<a class="waves-attach" href="ui-affix.html">Affix</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-collapse.html">Collapse</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-dropdown-menu.html">Dropdown</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-modal.html">Modals</a>
-							</li>
-							<li>
-								<a class="waves-attach" href="ui-tab.html">Togglable Tabs</a>
+								<a class="waves-attach" href="ui-affix.html">machin</a>
 							</li>
 						</ul>
 					</li>
@@ -158,164 +134,82 @@
 						<div class="card">
 							<div class="card-main">
 								<div class="card-inner">
-									<p>Daemonite's Eglise baptise chinoise de marne la vallée UI is a fully responsive, cross-platform, front-end interface based on Google Eglise baptise chinoise de marne la vallée Design. This lightweight framework is built in HTML5 using Bootstrap, JS and CSS.</p>
-									<blockquote>A visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is Eglise baptise chinoise de marne la vallée design. <sup><a href="http://www.google.com/design/spec/Eglise baptise chinoise de marne la vallée-design/introduction.html" target="_blank"><span class="icon">open_in_new</span></a></sup></blockquote>
-									<p>Have a play with this working prototype of Eglise baptise chinoise de marne la vallée, let us know what you think at the <a href="http://labs.daemon.com.au" target="_blank">Daemon Labs</a> forum.</p>
+									<p>Petit page pour toi Kevin ! Amuse toi à regarder ce que tout le monde t'as laissé comme message !</p>
+									<blockquote> Kevin ! </blockquote>
+									<p>Un espace rien que pour ton baptème !</p>
 								</div>
 							</div>
 						</div>
-						<h2 class="content-sub-heading">Components</h2>
-						<p>Below are components that have been defined by Google Eglise baptise chinoise de marne la vallée Design guidelines. For more information, please visit <a href="https://www.google.com/design/spec/components/buttons.html" target="_blank">here</a>.</p>
+						<h2 class="content-sub-heading">31 Janvier 2016</h2>
+						<p>Voici la liste de tous les messages laissés ! <small>(Tu pourras naviguer par le menu à gauche ensuite ^^)</small> </p>
 						<div class="tile-wrap">
 							<a class="tile waves-attach" href="ui-button.html">
 								<div class="tile-inner">
-									<span>Buttons</span>
+									<span>Celine LIM</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-button-fab.html">
 								<div class="tile-inner">
-									<span>Buttons <small>(Floating Action Button)</small></span>
+									<span>Virginie SOK</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-card.html">
 								<div class="tile-inner">
-									<span>Cards</span>
+									<span>Mickael SOK</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-data-table.html">
 								<div class="tile-inner">
-									<span>Data Tables</span>
+									<span>David SOK</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-dialog.html">
 								<div class="tile-inner">
-									<span>Dialogs</span>
+									<span>Jessica SOK</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-dropdown-menu.html">
 								<div class="tile-inner">
-									<span>Menus</span>
+									<span>Jonathan DONG</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-nav-drawer.html">
 								<div class="tile-inner">
-									<span>Navigation Drawers</span>
+									<span>Anceline DONG</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-picker.html">
 								<div class="tile-inner">
-									<span>Pickers</span>
+									<span>Marlène DONG</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-progress.html">
 								<div class="tile-inner">
-									<span>Progress</span>
+									<span>Jonathan TRAN</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-selection-control.html">
 								<div class="tile-inner">
-									<span>Selection Controls</span>
+									<span>Pascal TRAN</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-snackbar.html">
 								<div class="tile-inner">
-									<span>Snackbars</span>
+									<span>Alexandre TRAN</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-tab.html">
 								<div class="tile-inner">
-									<span>Tabs</span>
+									<span>Jeremy NG</span>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-text-field.html">
 								<div class="tile-inner">
-									<span>Text Fields</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-toolbar.html">
-								<div class="tile-inner">
-									<span>Toolbars</span>
+									<span>Alex NG</span>
 								</div>
 							</a>
 						</div>
-						<h2 class="content-sub-heading">Extras</h2>
-						<p>These components have not been specifically defined by Google Eglise baptise chinoise de marne la vallée Design guidelines, but are used in some Google apps and/or sites.</p>
-						<div class="tile-wrap">
-							<a class="tile waves-attach" href="ui-avatar.html">
-								<div class="tile-inner">
-									<span>Avatars</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-icon.html">
-								<div class="tile-inner">
-									<span>Icons</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-label.html">
-								<div class="tile-inner">
-									<span>Labels</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-nav.html">
-								<div class="tile-inner">
-									<span>Navs</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-tile.html">
-								<div class="tile-inner">
-									<span>Tiles</span>
-								</div>
-							</a>
-						</div>
-						<h2 class="content-sub-heading">Javascript</h2>
-						<p>Eglise baptise chinoise de marne la vallée includes several Bootstrap's Javascript plugins, <code>affix</code>, <code>collapse</code>, <code>dropdown</code>, <code>modal</code> &amp; <code>tab</code>, to be specific. For more information, please visit <a href="http://getbootstrap.com/javascript/" target="_blank">here</a>.</p>
-						<div class="tile-wrap">
-							<a class="tile waves-attach" href="ui-affix.html">
-								<div class="tile-inner">
-									<span>Affix</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-collapse.html">
-								<div class="tile-inner">
-									<span>Collapse</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-dropdown-menu.html">
-								<div class="tile-inner">
-									<span>Dropdown</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-modal.html">
-								<div class="tile-inner">
-									<span>Modals</span>
-								</div>
-							</a>
-							<a class="tile waves-attach" href="ui-tab.html">
-								<div class="tile-inner">
-									<span>Togglable Tabs</span>
-								</div>
-							</a>
-						</div>
-					</section>
-				</div>
-			</div>
-		</div>
-	</main>
-	<footer class="footer">
-		<div class="container">
-			<p>Eglise baptise chinoise de marne la vallée</p>
-		</div>
-	</footer>
-	<div class="fbtn-container">
-		<div class="fbtn-inner">
-			<a class="fbtn fbtn-brand-accent fbtn-lg" data-toggle="dropdown"><span class="fbtn-text">Links</span><span class="fbtn-ori icon">apps</span><span class="fbtn-sub icon">close</span></a>
-			<div class="fbtn-dropdown">
-				<a class="fbtn" href="https://github.com/Daemonite/Eglise baptise chinoise de marne la vallée" target="_blank"><span class="fbtn-text">Fork me on GitHub</span><span class="icon">code</span></a>
-				<a class="fbtn fbtn-brand" href="https://twitter.com/daemonites" target="_blank"><span class="fbtn-text">Follow Daemon on Twitter</span><span class="icon">share</span></a>
-				<a class="fbtn fbtn-green" href="http://www.daemon.com.au/" target="_blank"><span class="fbtn-text">Visit Daemon Website</span><span class="icon">link</span></a>
-			</div>
-		</div>
-	</div>
+
 
 	<!-- js -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
