--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 				</a>
 			</li>
 		</ul>
-		<a class="header-logo margin-left-no" href="index.html">Eglise baptise chinoise de marne la vallée - Baptème de Kevin LIM</a>
+		<a class="header-logo margin-left-no" href="index.html">Baptème de Kevin LIM</a>
 		<ul class="nav nav-list pull-right">
 			<li class="dropdown margin-right">
 				<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
