Test icon profil

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 	<!-- css for doc -->
 	<link href="./css/project.css" rel="stylesheet">
 	
+    <!-- css for kevin -->
+    <link href="./css/kevinBapteme.css" rel="stylesheet">
+    
 	<!-- favicon -->
 	<!-- ... -->
 </head>
@@ -28,7 +31,7 @@
 		<ul class="nav nav-list pull-right">
 			<li class="dropdown margin-right">
 				<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
-					<span class="access-hide">John Smith</span>
+					<span class="access-hide">Kevin LIM</span>
 					<span class="avatar avatar-sm"><img alt="alt text for John Smith avatar" src="./images/users/KevinSmall.jpg"></span>
 				</a>
 				<ul class="dropdown-menu">
@@ -54,7 +57,18 @@
 						<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Messages</a>
 						<ul class="collapse menu-collapse" id="doc_menu_components">
                             <li>
-								<a class="waves-attach" href="ui-button.html">Celine LIM</a>
+                                <a class="waves-attach" href="ui-button.html"> 
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
+                                            </td>
+                                            <td class="MenuAlignDroite">
+                                                <span>Celine LIM</span>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </a>
 							</li>
 							<li>
 								<a class="waves-attach" href="ui-button.html">Virginie SOK</a>
@@ -145,7 +159,16 @@
 						<div class="tile-wrap">
 							<a class="tile waves-attach" href="ui-button.html">
 								<div class="tile-inner">
-									<span>Celine LIM</span>
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
+                                            </td>
+                                            <td class="MenuAlignDroite">
+                                                <span>Celine LIM</span>
+                                            </td>
+                                        </tr>
+                                    </table>
 								</div>
 							</a>
 							<a class="tile waves-attach" href="ui-button-fab.html">
