arrange profil + nom

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                                 <a class="waves-attach" href="ui-button.html"> 
                                     <table>
                                         <tr>
-                                            <td>
+                                            <td class="MenuIconGauche">
                                                 <span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
                                             </td>
                                             <td class="MenuAlignDroite">
@@ -161,7 +161,7 @@
 								<div class="tile-inner">
                                     <table>
                                         <tr>
-                                            <td>
+                                            <td class="MenuIconGauche">
                                                 <span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
                                             </td>
                                             <td class="MenuAlignDroite">
