réangement du message d'Axelle

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 			</a>
 		</li>
 	</ul>
-	<a class="header-logo margin-left-no" href="index.html">Baptème de Kevin LIM</a>
+	<a class="header-logo margin-left-no" href="#">Baptème de Kevin LIM</a>
 	<ul class="nav nav-list pull-right">
 		<li class="dropdown margin-right">
 			<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
@@ -63,7 +63,7 @@
 <nav aria-hidden="true" class="menu" id="doc_menu" tabindex="-1">
 	<div class="menu-scroll">
 		<div class="menu-content">
-			<a class="menu-logo" href="index.html">Baptême de Kevin Lim</a>
+			<a class="menu-logo" href="#">Baptême de Kevin Lim</a>
 			<ul class="nav">
 				<li>
 					<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Messages</a>
@@ -328,7 +328,7 @@
 
 	<div class="card-wrap">
 		<div class="row">
-			<div class="col-md-4 col-sm-6">
+			<div class="col-md-6 col-sm-6">
 				<div class="card">
 					<div class="card-main">
 						<div class="card-inner">
@@ -344,7 +344,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-6">
+			<div class="col-md-6 col-sm-6">
 				<div class="card">
 					<div class="card-main">
 						<div class="card-inner">
@@ -360,6 +360,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="card">
 					<div class="card-main">
@@ -373,15 +376,6 @@
 								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 10:9</a>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-4 col-sm-6">
-				<div class="card">
-					<div class="card-main">
 						<div class="card-inner">
 							<blockquote>
 								Je suis le bon berger. Le bon berger donne sa vie pour ses brebis.
@@ -395,57 +389,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="card">
-					<div class="card-main">
-						<div class="card-inner">
-							<blockquote>
-								C'est moi qui suis la résurrection et la vie. Celui qui croit en moi vivra, même s'il meurt.
-							</blockquote>
-						</div>
-						<div class="card-action">
-							<div class="card-action-btn pull-left">
-								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 11:25</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="card">
-					<div class="card-main">
-						<div class="card-inner">
-							<blockquote>
-								C'est moi qui suis le chemin, la vérité et la vie. On ne vient au Père qu'en passant par moi.
-							</blockquote>
-						</div>
-						<div class="card-action">
-							<div class="card-action-btn pull-left">
-								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 14:6</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-md-4 col-sm-6">
-				<div class="card">
-					<div class="card-main">
-						<div class="card-inner">
-							<blockquote>
-								C'est moi qui suis le vrai cep, et mon Père est le vigneron.
-							</blockquote>
-						</div>
-						<div class="card-action">
-							<div class="card-action-btn pull-left">
-								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 15:1</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+
 			<div class="col-md-8 col-sm-6">
 				<div class="card">
 					<div class="card-main">
@@ -464,6 +409,57 @@
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="card">
+					<div class="card-main">
+						<div class="card-inner">
+							<blockquote>
+								C'est moi qui suis la résurrection et la vie. Celui qui croit en moi vivra, même s'il meurt.
+							</blockquote>
+						</div>
+						<div class="card-action">
+							<div class="card-action-btn pull-left">
+								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 11:25</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-sm-6">
+				<div class="card">
+					<div class="card-main">
+						<div class="card-inner">
+							<blockquote>
+								C'est moi qui suis le chemin, la vérité et la vie. On ne vient au Père qu'en passant par moi.
+							</blockquote>
+						</div>
+						<div class="card-action">
+							<div class="card-action-btn pull-left">
+								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 14:6</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="card">
+					<div class="card-main">
+						<div class="card-inner">
+							<blockquote>
+								C'est moi qui suis le vrai cep, et mon Père est le vigneron.
+							</blockquote>
+						</div>
+						<div class="card-action">
+							<div class="card-action-btn pull-left">
+								<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Jean 15:1</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- FIN DES CARTES DE CITATION -->
