Ajout du message d'Oscar

--- a/public/index.html
+++ b/public/index.html
@@ -111,40 +111,54 @@
 							</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-button-fab.html">Mickael SOK</a>
+							<a class="waves-attach" href="#/OscarSChen">
+								<table>
+									<tr>
+										<td class="MenuIconGauche">
+											<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
+										</td>
+										<td class="MenuAlignDroite">
+											<span>Oscar S Chen</span>
+										</td>
+									</tr>
+								</table>
+							</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-card.html">David SOK</a>
+							<a class="waves-attach" href="#">Mickael SOK</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-data-table.html">Jessica SOK</a>
+							<a class="waves-attach" href="#">David SOK</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-dialog.html">Jonathan DONG</a>
+							<a class="waves-attach" href="#">Jessica SOK</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-dropdown-menu.html">Anceline DONG</a>
+							<a class="waves-attach" href="#">Jonathan DONG</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-nav-drawer.html">Marlène DONG</a>
+							<a class="waves-attach" href="#">Anceline DONG</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-picker.html">Jonathan TRAN</a>
+							<a class="waves-attach" href="#">Marlène DONG</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-progress.html">Pascal TRAN</a>
+							<a class="waves-attach" href="#">Jonathan TRAN</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-selection-control.html">Alexandre TRAN</a>
+							<a class="waves-attach" href="#">Pascal TRAN</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-snackbar.html">Jeremy NG</a>
+							<a class="waves-attach" href="#">Alexandre TRAN</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-tab.html">Alex NG</a>
+							<a class="waves-attach" href="#">Jeremy NG</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-tab.html">Stephane MAHTOUT</a>
+							<a class="waves-attach" href="#">Alex NG</a>
+						</li>
+						<li>
+							<a class="waves-attach" href="#">Stephane MAHTOUT</a>
 						</li>
 					</ul>
 				</li>
@@ -205,15 +219,16 @@
 					</div>
 				</div>
 			</section>
+			<h2 class="content-sub-heading">31 Janvier 2016</h2>
+			<p>Voici la liste de tous les messages laissés ! <small>(Tu pourras naviguer par le menu à gauche ensuite ^^)</small> </p>
 		</div>
 	</div>
 
-	<h2 class="content-sub-heading">31 Janvier 2016</h2>
-	<p>Voici la liste de tous les messages laissés ! <small>(Tu pourras naviguer par le menu à gauche ensuite ^^)</small> </p>
+
 
 	<!-- DATA TABLE -->
 
-	<div class="table-responsive">
+	<div class="table-responsive col-lg-6 col-lg-push-3 col-sm-10 col-sm-push-1">
 		<table class="table" title="A basic table">
 			<thead>
 			<tr>
@@ -224,48 +239,56 @@
 			<tr>
 				<td>
 					<a class="waves-attach" href="#/CelineLIM">
-						<table>
-							<tr>
-								<td class="MenuIconGauche">
-									<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
-								</td>
-								<td class="MenuAlignDroite">
-									<span>Celine LIM</span>
-								</td>
-							</tr>
-						</table>
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Celine LIM</span>
+							</div>
+						</div>
 					</a>
 				</td>
 			</tr>
 			<tr>
 				<td>
 					<a class="waves-attach" href="#/AxelleLY">
-						<table>
-							<tr>
-								<td class="MenuIconGauche">
-									<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
-								</td>
-								<td class="MenuAlignDroite">
-									<span>Axelle LY</span>
-								</td>
-							</tr>
-						</table>
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Axelle LY</span>
+							</div>
+						</div>
 					</a>
 				</td>
 			</tr>
 			<tr>
 				<td>
 					<a class="waves-attach" href="#/VirginieSOK">
-						<table>
-							<tr>
-								<td class="MenuIconGauche">
-									<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
-								</td>
-								<td class="MenuAlignDroite">
-									<span>Vriginie SOK</span>
-								</td>
-							</tr>
-						</table>
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Vriginie SOK</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/OscarSChen">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Oscar S Chen</span>
+							</div>
+						</div>
 					</a>
 				</td>
 			</tr>
@@ -298,9 +321,9 @@
 
 <script id="AxelleLY" type="text/x-kendo-template">
 
-	<div class="col-lg-12 col-sm-1">
+	<div class="col-md-12 col-sm-1">
 		<div class="card">
-			<div class="card-main">
+			<div class="card-main ColorBlock1">
 				<div class="card-header">
 					<div class="card-header-side pull-left">
 						<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
@@ -486,6 +509,28 @@
 	</div>
 </script>
 
+<script id="OscarSChen" type="text/x-kendo-template">
+	<div class="col-md-12 col-sm-1">
+		<div class="card">
+			<div class="card-main ColorBlock1">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
+					</div>
+					<div class="card-inner">
+						<span>Oscar S Chen</span>
+					</div>
+				</div>
+				<div class="card-inner">
+					<p>
+						Salut Kevin, je suis très content d'appendre ta démarche envers Dieu et ta volonté de vouloir témoigner son amour pour toi à travers ton baptême. Tu as fait le meilleur choix et une vie pleine de bénédictions s'ouvre à toi, bref une nouvelle aventure quoi ! Suis le chemin qu'Il a tracé pour toi, sois la lumière et le sel pour ton entourage, et que Dieu t'accompagne tous les jours dans cette nouvelle vie :D.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
 <script>
 	// models
 	var viewModel = kendo.observable({
@@ -518,6 +563,11 @@
 			e.preventDefault();
 		},
 
+		goToViewVirginieSOK: function(e) {
+			router.navigate("/OscarSChen");
+			e.preventDefault();
+		},
+
 		goToIndex: function(e) {
 			router.navigate("/");
 			e.preventDefault();
@@ -535,6 +585,8 @@
 	var AxelleLY = new kendo.View("AxelleLY", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
 	var VirginieSOK = new kendo.View("VirginieSOK", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
+	var OscarSChen = new kendo.View("OscarSChen", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
 
 	// routing
@@ -558,6 +610,10 @@
 
 	router.route("/VirginieSOK", function() {
 		layout.showIn("#content", VirginieSOK);
+	});
+
+	router.route("/OscarSChen", function() {
+		layout.showIn("#content", OscarSChen);
 	});
 
 	$(function() {
