formattage menu drawer items

--- a/public/index.html
+++ b/public/index.html
@@ -70,58 +70,50 @@
 					<ul class="collapse menu-collapse" id="doc_menu_components">
 						<li>
 							<a class="waves-attach" href="#/CelineLIM">
-								<table>
-									<tr>
-										<td class="MenuIconGauche">
-											<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
-										</td>
-										<td class="MenuAlignDroite">
-											<span>Celine LIM</span>
-										</td>
-									</tr>
-								</table>
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Celine LIM</span>
+									</div>
+								</div>
 							</a>
 						</li>
 						<li>
 							<a class="waves-attach" href="#/AxelleLY">
-								<table>
-									<tr>
-										<td class="MenuIconGauche">
-											<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
-										</td>
-										<td class="MenuAlignDroite">
-											<span>Axelle LY</span>
-										</td>
-									</tr>
-								</table>
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Axelle LY</span>
+									</div>
+								</div>
 							</a>
 						</li>
 						<li>
 							<a class="waves-attach" href="#/VirginieSOK">
-								<table>
-									<tr>
-										<td class="MenuIconGauche">
-											<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
-										</td>
-										<td class="MenuAlignDroite">
-											<span>Vriginie SOK</span>
-										</td>
-									</tr>
-								</table>
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Vriginie SOK</span>
+									</div>
+								</div>
 							</a>
 						</li>
 						<li>
 							<a class="waves-attach" href="#/OscarSChen">
-								<table>
-									<tr>
-										<td class="MenuIconGauche">
-											<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
-										</td>
-										<td class="MenuAlignDroite">
-											<span>Oscar S Chen</span>
-										</td>
-									</tr>
-								</table>
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Oscar S Chen</span>
+									</div>
+								</div>
 							</a>
 						</li>
 						<li>
