Correction de faute

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 										<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
 									</div>
 									<div class="card-inner">
-										<span>Vriginie SOK</span>
+										<span>Virginie SOK</span>
 									</div>
 								</div>
 							</a>
@@ -264,7 +264,7 @@
 								<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
 							</div>
 							<div class="card-inner">
-								<span>Vriginie SOK</span>
+								<span>Virginie SOK</span>
 							</div>
 						</div>
 					</a>
