retrait de liens morts

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 					<a class="padding-right-lg waves-attach" href="javascript:void(0)"><span class="icon icon-lg margin-right">add_to_photos</span>Upload Photo</a>
 				</li>
 				<li>
-					<a class="padding-right-lg waves-attach" href="page-login.html"><span class="icon icon-lg margin-right">exit_to_app</span>Logout</a>
+					<a class="padding-right-lg waves-attach" href="#"><span class="icon icon-lg margin-right">exit_to_app</span>Logout</a>
 				</li>
 			</ul>
 		</li>
@@ -158,10 +158,10 @@
 					<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Vidéos</a>
 					<ul class="collapse menu-collapse" id="doc_menu_extras">
 						<li>
-							<a class="waves-attach" href="ui-avatar.html">2010</a>
+							<a class="waves-attach" href="#">2010</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="ui-icon.html">Noel 2005</a>
+							<a class="waves-attach" href="#">Noel 2005</a>
 						</li>
 					</ul>
 				</li>
@@ -169,7 +169,7 @@
 					<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_javascript">Trucs</a>
 					<ul class="collapse menu-collapse" id="doc_menu_javascript">
 						<li>
-							<a class="waves-attach" href="ui-affix.html">machin</a>
+							<a class="waves-attach" href="#">machin</a>
 						</li>
 					</ul>
 				</li>
