--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 	<meta content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" name="viewport">
 	<title>Eglise baptise chinoise de marne la vallée</title>
 
-	<link rel="stylesheet" href="./css/kendo.common.min.css"/>
-	<link rel="stylesheet" href="./css/kendo.rtl.min.css"/>
-	<link rel="stylesheet" href="./css/kendo.silver.min.css"/>
-	<link rel="stylesheet" href="./css/kendo.mobile.all.min.css"/>
+    <link rel="stylesheet" href="./css/kendo.common.min.css"/>
+    <link rel="stylesheet" href="./css/kendo.rtl.min.css"/>
+    <link rel="stylesheet" href="./css/kendo.silver.min.css"/>
+    <link rel="stylesheet" href="./css/kendo.mobile.all.min.css"/>
 
-	<script src="./js/jquery-1.9.1.min.js"></script>
-	<script src="./js/kendo.all.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="http://kendo.cdn.telerik.com/2016.1.112/js/kendo.all.min.js"></script>
 	<!-- js -->
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/base.min.js"></script>
